@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-31T16:23:42Z",
+  "timestamp" : "2022-08-01T02:02:00Z",
   "count_outdated" : 2304,
   "uniques_outdated" : 518,
-  "count" : 2334,
-  "uniques" : 536,
+  "count" : 2336,
+  "uniques" : 537,
   "clones" : [
     {
       "timestamp": "2022-07-20T00:00:00Z",
@@ -84,10 +84,10 @@
     },
     {
       "timestamp": "2022-07-31T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 5,
+      "count_minmax": [ 2, 5 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ]
     }
   ]
 }
