@@ -1,6 +1,6 @@
 {
-  "count": 30,
-  "uniques": 7,
+  "count": 32,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-07-20T00:00:00Z",
@@ -59,8 +59,8 @@
     },
     {
       "timestamp": "2022-07-31T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 5,
+      "uniques": 3
     }
   ]
 }
